test/corpus/repeat.txt
==================
repeat statements parens around amount
==================

repeat(3) { wait(seconds: 3) }

---

(source_file
  (repeat_definition
    (number)
    (block
      (function_call
        (identifier
          (identifier_content))
        (parameter_list
          (parameter_list_item
            (identifier
              (identifier_content))
            (identifier
              (identifier_content))))))))

==================
repeat statements space around amount
==================

repeat 3 { wait(seconds: 3) }

---

(source_file
  (repeat_definition
    (number)
    (block
      (function_call
        (identifier
          (identifier_content))
        (parameter_list
          (parameter_list_item
            (identifier
              (identifier_content))
            (identifier
              (identifier_content))))))))

==================
repeat statements open left paren amount
==================

repeat(3 { wait(seconds: 3) }

---

    (source_file
      (ERROR
        (number)
        (string_chars)))

==================
repeat statements open right paren amount
==================

repeat 3){ wait(seconds: 3) }

---

    (source_file
      (ERROR
        (number)
        (string_chars)))

